Navbar Slide up and down on scroll

--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -66,6 +66,22 @@
       border-radius: 20px;
     }
   }
+  @keyframes slidedown {
+    from {
+      bottom: -1px;
+    }
+    to {
+      bottom: -100px;
+    }
+  }
+  @keyframes slideup {
+    from {
+      bottom: -100px;
+    }
+    to {
+      bottom: -1px;
+    }
+  }
   .navbar-container {
     background-color: var(--background);
     border: 1px solid #535353be;
@@ -696,4 +712,13 @@
   
   a {
     text-decoration: none;
+  }
+
+  .up {
+    animation: slideup 0.3s ease-in-out;
+    bottom: -1px;
+  }
+  .down {
+    animation: slidedown 0.3s ease-in-out;
+    bottom: -100px;
   }
