--- a/app/styles/randomSnaps.css
+++ b/app/styles/randomSnaps.css
@@ -919,7 +919,7 @@
   height: 100%;
   aspect-ratio: 19/10;
   background: #2c2c2c;
-  border-radius: 45px;
+  /* border-radius: 45px; */
   display: flex;
   flex-direction: column;
   align-items: center;
