Solve conflicts between iphone and mac frame

--- a/app/styles/randomSnaps.css
+++ b/app/styles/randomSnaps.css
@@ -542,6 +542,11 @@
     color: white;
     background: transparent;
   }
+  .dock-icon.share,
+  .dock-icon.favorite.active{
+    color: white;
+    background: transparent;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -572,6 +577,11 @@
   }
   .dock-icon.share,
   .dock-icon.favorite{
+    color: white;
+    background: transparent;
+  }
+  .dock-icon.share,
+  .dock-icon.favorite.active{
     color: white;
     background: transparent;
   }
@@ -919,7 +929,7 @@
   height: 100%;
   aspect-ratio: 19/10;
   background: #2c2c2c;
-  /* border-radius: 45px; */
+  border-radius: 45px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -929,7 +939,7 @@
 }
 
 .skeleton-container.empty {
-  background: #2c2c2c
+  background: #2c2c2c;
 }
 
 .placeholder-text {
@@ -3172,4 +3182,21 @@
 
 .gallery-bottom-sheet.fully-expanded {
   transform: translateY(0);
+}
+
+.desktop-skeleton-container {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16/9;
+  background: #2c2c2c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.desktop-skeleton-container.empty {
+  background: #2c2c2c;
 }
