--- a/app/styles/addWallpaper.css
+++ b/app/styles/addWallpaper.css
@@ -126,11 +126,12 @@
   }
 
   .add-wallpaper-form {
-    padding-bottom: env(safe-area-inset-bottom, 20px);
+    padding: 0 1rem 2rem;
+    margin-bottom: env(safe-area-inset-bottom, 20px);
     width: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
     box-sizing: border-box;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 
   .form-group {
@@ -554,21 +555,30 @@
   }
 
   .add-wallpaper-form {
-    /* height: calc(100% - 60px); */
+    padding: 0 1rem 2rem;
+    margin-bottom: env(safe-area-inset-bottom, 20px);
+    width: 100%;
+    box-sizing: border-box;
     overflow-y: auto;
-    padding-bottom: 1rem;
+    -webkit-overflow-scrolling: touch;
   }
 
-  .add-wallpaper-dialog::-webkit-scrollbar {
-    width: 0px;
+  .dialog-content {
+    padding: 0;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    height: calc(100% - 60px);
   }
 
-  .add-wallpaper-dialog::-webkit-scrollbar-track {
-    display: none;
+  .add-wallpaper-dialog {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
   }
 
-  .add-wallpaper-dialog::-webkit-scrollbar-thumb {
-    display: none;
+  .preview-container {
+    margin: 1rem -1rem;
+    width: calc(100% + 2rem);
   }
 
   .add-wallpaper-title {
